--- a/asivamosffie.web/asivamosffie/src/app/shared/components/sub-menu/sub-menu.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/sub-menu/sub-menu.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="menu-lateral" [hasBackdrop]="false">
-  <mat-drawer class="menu-lateral--left" #drawer mode="side" opened>
+  <mat-drawer class="menu-lateral--left print-d-none" #drawer mode="side" opened>
     <div class="menu">
       <a class="menu--button" routerLink="fichaContratosProyectos">
         <img src="assets/img/icon/Menu-principal/ficha.svg" alt="Ficha de contratos o proyectos">
