--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/tabla-resultados-proyecto/tabla-resultados-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/tabla-resultados-proyecto/tabla-resultados-proyecto.component.html
@@ -61,7 +61,7 @@
         >
           Ver ficha
         </button>
-        <button
+        <!--<button
           mat-button
           mat-raised-button
           color="accent"
@@ -69,7 +69,7 @@
           (click)="descargarFicha()"
         >
           Descargar ficha
-        </button>
+        </button>-->
       </td>
     </ng-container>
 
