--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
@@ -540,7 +540,7 @@
       </mat-accordion>
     </mat-expansion-panel>
   </mat-accordion>
-  <div class="text-center mt-2em mb-2em print-d-none">
+  <!--<div class="text-center mt-2em mb-2em print-d-none">
     <button mat-raised-button color="accent" (click)="downloadPDF();">Descargar</button>
-  </div>
+  </div>-->
 </section>
