--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
@@ -81,9 +81,10 @@
                       {{ element.cantidadHvAprobadas }}
                     </td>
                     <td class="mat-cell cdk-cell ng-star-inserted">
-                      <a class="ruta-url max-width-none" [href]="element.rutaSoporte" target="_blank" rel="noopener noreferrer">
-                        {{ element.rutaSoporte }}
+                      <a class="ruta-url max-width-none print" [href]="element.rutaSoporte" target="_blank" rel="noopener noreferrer" style="display: none;">
+                        <span class="print" style="display: none;">Link</span>
                       </a>
+                      <span class="print-d-none">{{ element.rutaSoporte }}</span>
                     </td>
                   </tr>
                 </tbody>
@@ -142,9 +143,10 @@
                     {{ element.cantidadHvAprobadas }}
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    <a class="ruta-url max-width-none" [href]="element.rutaSoporte" target="_blank" rel="noopener noreferrer">
-                      {{ element.rutaSoporte }}
+                    <a class="ruta-url max-width-none print" [href]="element.rutaSoporte" target="_blank" rel="noopener noreferrer" style="display: none;">
+                      <span class="print" style="display: none;">Link</span>
                     </a>
+                    <span class="print-d-none">{{ element.rutaSoporte }}</span>
                   </td>
                 </tr>
               </tbody>
@@ -519,9 +521,10 @@
                     {{ element.cantidadHvAprobadas }}
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    <a class="ruta-url max-width-none" [href]="element.rutaSoporte" target="_blank" rel="noopener noreferrer">
-                      {{ element.rutaSoporte }}
+                    <a class="ruta-url max-width-none print" [href]="element.rutaSoporte" target="_blank" rel="noopener noreferrer" style="display: none;">
+                      <span class="print" style="display: none;">Link</span>
                     </a>
+                    <span class="print-d-none">{{ element.rutaSoporte }}</span>
                   </td>
                 </tr>
               </tbody>
