--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.scss
@@ -2,11 +2,8 @@
   .table-reporte tbody  {
     overflow-x: hidden !important;
   }
-  .table-reporte td:last-child {
-    max-width: 25em !important;
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    white-space: nowrap !important;
+  .print {
+    display: block !important;
   }
 }
 .btn{
